<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_container_address_info"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.EnderecoFragment"
        android:orientation="vertical">

    <TextView
            tools:text="São Paulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/localidade"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/label_localidade"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/label_localidade"/>

    <TextView
            android:text="@string/localidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_localidade"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/label_logradouro"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/informacoes_endereco"
            android:id="@+id/text_title"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/logradouro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_logradouro"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/text_title"/>

    <TextView
            tools:text="Praça da Sé"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/logradouro"
            app:layout_constraintStart_toEndOf="@+id/label_logradouro"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/label_logradouro"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

    <TextView
            android:text="@string/uf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_uf"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/label_localidade" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            tools:text="SP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uf" app:layout_constraintStart_toEndOf="@+id/label_uf"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/label_uf"/>
    <TextView
            android:text="@string/bairro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_bairro"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/label_uf" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            tools:text="Centro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bairro"
            app:layout_constraintStart_toEndOf="@+id/label_bairro"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/label_bairro"/>
    <TextView
            android:text="@string/label_cep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_cep"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/label_bairro" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            tools:text="01001-0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cep"
            app:layout_constraintStart_toEndOf="@+id/label_cep"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/label_cep"/>

    <androidx.constraintlayout.widget.Group
            android:id="@+id/group_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="logradouro, label_logradouro,
            localidade, label_localidade, cep, label_cep, uf, label_uf, bairro, label_bairro"/>

</androidx.constraintlayout.widget.ConstraintLayout>